<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Login"
        android:textSize="50sp"
        android:gravity="center"
        android:id="@+id/tvTextView"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/Enter_Your_email"
        android:inputType="textEmailAddress"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_your_password"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:id="@+id/btnLogin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/Register"
        android:textSize="30sp"
        android:id="@+id/btnRegister"
        />

</LinearLayout>